--------------------
Zmiany w ZPD 1.0.0 (2015-02-16)

- Zmiany w grupie danych "parametry":
  - dodanie pobierania parametrów grup (dotychczas tylko kryteriów oceny)
- Zmiany w grupie danych "wyniki":
  - uwolnienie od zależności od pakietu EWDdane poprzez przeniesienie kodu
    funkcji EWDdane::normy_ekwikwantylowe()
- Techniczne:
  - korekta błędu w wewnętrznej funkcji ramka_danych_pv() wprowadzonego 
    w wersji 0.9, który uniemożliwiał wyliczanie PWE funkcją agreguj_pwe()
  - korekta błędu w funkcji oblicz_wariancje_populacji() wprowadzonego
    w wersji 0.9, który uniemożliwiał wyliczanie PWE funkcją agreguj_pwe()
  - dodanie automatycznej weryfikacji pakietu za pomocą Travis-a
    (http://r-pkgs.had.co.nz/check.html#travis)
  - dopisanie prostego testu dla funkcji agreguj_pwe()
  - dodanie automatycznych raportów pokrycia za pomocą pakietu "covr"
    i coverall (https://github.com/jimhester/covr)
- Przeniesienie funkcji realizujących zapis do bazy do oddzielnego pakietu
- Przeniesienie funkcji niezwiązanych z pobieraniem danych z bazy do 
  oddzielnego pakietu (sprawdz_podwojne_ocenianie(), sprawdz_realizacje(),
  wczytaj_spss(), itp.)

--------------------
Zmiany w ZPD 0.9.5 (2015-02-15)

- Zmiany w grupie danych "wyniki":
  - korekta sprawdzania wartości wejściowych przez funkcję zsumuj_punkty()
    (dotychczas niepoprawnie nie dopuszczała, aby dane były tablicą dplyr-a)
- Zmiany w grupie danych "szkoly":
  - pobierz_szkoly() zwraca także zmienną "artystyczna"

--------------------
Zmiany w ZPD 0.9.4 (2015-02-11)

- Zmiany w grupie danych "testy":
  - dostosowanie funkcji pobierz_testy() do zmian w strukturze bazy danych
- Zmiany w grupie danych "skale":
  - dostosowanie funkcji pobierz_testy() do zmian w strukturze bazy danych
- Zmiany w grupie danych "wartosciWskaznikow":
  - dostosowanie funkcji pobierz_wartosci_wskaznikow() i 
    pobierz_wartosci_wskaznikow_lu() do zmian w strukturze bazy danych
- Zmiany w funkcjach do zapisu do bazy: